--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "eventbriteEvents: An Ionic project",
   "dependencies": {
     "chart.js": "^1.0.2",
+    "express": "^4.13.4",
     "gulp": "^3.5.6",
     "gulp-concat": "^2.2.0",
     "gulp-minify-css": "^0.3.0",
